upgraded to spring boot application